force-app/main/default/objects/tc9_et__Expense_Claim__c/tc9_et__Expense_Claim__c.object-meta.xml
<CustomObject>
    <description>A master object that holds details of expenses. The Timesheet holds header information and groups Expenses so they can go through a submission/approval process</description>
    <label>Expense Claim</label>
    <nameField>
        <displayFormat>EC-{0000000000}</displayFormat>
        <label>Expense Claim</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>