force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Alternative_Approver_Current_Link_Token__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Alternative_Approver_Current_Link_Token__c</fullName>
    <description>The Alternative Expense Claim Approvers current Expense Claim Token. Used on email templates</description>
    <formula>tc9_et__Assignment__r.tc9_et__Alternative_Expense_Claim_Approver__r.tc9_pr__Approver_Link_Token__c</formula>
    <inlineHelpText>The Alternative Expense Claim Approvers current Expense Claim Token. Used on email templates</inlineHelpText>
    <label>Alternative Approver Current Link Token</label>
    <type>Text</type>
</CustomField>