force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Alternative_Approver_First_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Alternative_Approver_First_Name__c</fullName>
    <description>The Alternative Expense Claim Approvers First Name. Used on email templates</description>
    <formula>tc9_et__Assignment__r.tc9_et__Alternative_Expense_Claim_Approver__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Alternative Expense Claim Approvers First Name. Used on email templates</inlineHelpText>
    <label>Alternative Approver First Name</label>
    <type>Text</type>
</CustomField>