force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Approval_Status__c</fullName>
    <description>The Approval Status of the Expense Claim</description>
    <inlineHelpText>The Approval Status of the Expense Claim</inlineHelpText>
    <label>Approval Status (No Colour)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Approval_Status_Picklists</valueSetName>
    </valueSet>
</CustomField>