force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Approved_Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Approved_Rejected_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Approver who approved/rejected the Expense Claim</description>
    <inlineHelpText>The Approver who approved/rejected the Expense Claim</inlineHelpText>
    <label>Approved/Rejected By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expense Claims Approved/Rejected By Contact</relationshipLabel>
    <relationshipName>Expense_Claims1</relationshipName>
    <type>Lookup</type>
</CustomField>