force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Approved_Rejected_By_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Approved_Rejected_By_Name__c</fullName>
    <description>The Approver who Approved/Rejected the Expense Claim. Used on email templates.</description>
    <formula>tc9_et__Approved_Rejected_By__r.FirstName &amp; &quot; &quot; &amp;  tc9_et__Approved_Rejected_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Approver who Approved/Rejected the Expense Claim. Used on email templates.</inlineHelpText>
    <label>Approved/Rejected By Name</label>
    <type>Text</type>
</CustomField>