force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Approved_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Approved_Rejected_Date__c</fullName>
    <description>The Date/Time the Expense Claim was Approved or Rejected</description>
    <inlineHelpText>The Date/Time the Expense Claim was Approved or Rejected</inlineHelpText>
    <label>Approved/Rejected Date</label>
    <type>DateTime</type>
</CustomField>