force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Approved_Rejected_on_Behalf_Reason__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Approved_Rejected_on_Behalf_Reason__c</fullName>
    <description>If the Expense Claim was approved/rejected on Behalf of the Approver, this field records the reason why the Expense Claim was approved/rejected</description>
    <inlineHelpText>If the Expense Claim was approved/rejected on Behalf of the Approver, this field records the reason why the Expense Claim was approved/rejected</inlineHelpText>
    <label>Approved/Rejected on Behalf Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Approved_on_Behalf_Reason_Picklist</valueSetName>
    </valueSet>
</CustomField>