force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Approved_Rejected_on_Behalf_User__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Approved_Rejected_on_Behalf_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Expense Claim was approved/rejected on Behalf of the Approver, this field records the User who approved/rejected the Expense Claim</description>
    <inlineHelpText>If the Expense Claim was approved/rejected on Behalf of the Approver, this field records the User who approved/rejected the Expense Claim</inlineHelpText>
    <label>Approved/Rejected on Behalf User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expense_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>