force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Approved_Rejected_on_Behalf_User_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Approved_Rejected_on_Behalf_User_Name__c</fullName>
    <description>The Approved/Rejected on Behalf Users Full Name. Used on email templates</description>
    <formula>tc9_et__Approved_Rejected_on_Behalf_User__r.FirstName &amp; &quot; &quot; &amp; tc9_et__Approved_Rejected_on_Behalf_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Approved/Rejected on Behalf Users Full Name. Used on email templates</inlineHelpText>
    <label>Approved/Rejected on Behalf User Name</label>
    <type>Text</type>
</CustomField>