force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Approver_Notes__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Approver_Notes__c</fullName>
    <description>Comments the Approver has made against the Expense Claim</description>
    <inlineHelpText>Comments the Approver has made against the Expense Claim</inlineHelpText>
    <label>Approver Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>