force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Assignment that applies to the Expense Claim</description>
    <inlineHelpText>Defines the Assignment that applies to the Expense Claim</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Expense Claims</relationshipLabel>
    <relationshipName>Expense_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>