force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Assignment_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Assignment_Name__c</fullName>
    <description>The Assignment Name. Used on email templates</description>
    <formula>tc9_et__Assignment__r.tc9_pr__Assignment_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Assignment Name. Used on email templates</inlineHelpText>
    <label>Assignment Name</label>
    <type>Text</type>
</CustomField>