force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Claim_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Claim_Date__c</fullName>
    <description>Identifies the date the Expense Claim is made.</description>
    <inlineHelpText>Identifies the date the Expense Claim is made.</inlineHelpText>
    <label>Claim Date</label>
    <type>Date</type>
</CustomField>