force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Client_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Client_Name__c</fullName>
    <description>The Client Name. Used on email templates</description>
    <formula>tc9_et__Assignment__r.tc9_pr__Client__r.Name</formula>
    <inlineHelpText>The Client Name. Used on email templates</inlineHelpText>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>