force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Employee that applies to the Expense Claim</description>
    <inlineHelpText>Defines the Employee that applies to the Expense Claim</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employee&apos;s Expense Claims</relationshipLabel>
    <relationshipName>Expense_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>