force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Expense_Claim_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Expense_Claim_Description__c</fullName>
    <description>A high level description given to the Expense Claim to assist in the identification of its purpose and approval</description>
    <inlineHelpText>A high level description given to the Expense Claim to assist in the identification of its purpose and approval</inlineHelpText>
    <label>Expense Claim Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>