force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Expense_Claim_Support_Contact__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Expense_Claim_Support_Contact__c</fullName>
    <description>The Expense Claim Support Contact details as defined on the related notification setting. Used on email templates</description>
    <formula>if (
not(isblank(tc9_et__Assignment__r.tc9_pr__Client__r.tc9_et__Expense_Notification_Setting_Override__c)),
tc9_et__Assignment__r.tc9_pr__Client__r.tc9_et__Expense_Notification_Setting_Override__r.tc9_pr__Support_Contact_Details__c ,
tc9_et__Assignment__r.tc9_pr__Schedule__r.tc9_et__Expense_Claim_Notification_Setting__r.tc9_pr__Support_Contact_Details__c
)</formula>
    <inlineHelpText>The Expense Claim Support Contact details as defined on the related notification setting. Used on email templates</inlineHelpText>
    <label>Expense Claim Support Contact</label>
    <type>Text</type>
</CustomField>