force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Expense_Claim_Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Expense_Claim_Total_Tax__c</fullName>
    <description>The sum total of Expense Total Tax of all the Expenses related to the Expense Claim</description>
    <inlineHelpText>The sum total of Expense Total Tax of all the Expenses related to the Expense Claim</inlineHelpText>
    <label>Expense Claim Total Tax</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>