force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Last_Employee_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Last_Employee_Reminder_Sent__c</fullName>
    <description>Defines the Date/Time the last email was sent to remind the Employee to submit their Expense Claim</description>
    <inlineHelpText>Defines the Date/Time the last email was sent to remind the Employee to submit their Expense Claim</inlineHelpText>
    <label>Last Employee Reminder Sent</label>
    <type>DateTime</type>
</CustomField>