force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Notify_Employee_on_Approval__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Notify_Employee_on_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Employee should be sent an email on Expense Claim approval</description>
    <inlineHelpText>Indicates if the Employee should be sent an email on Expense Claim approval</inlineHelpText>
    <label>Notify Employee on Approval</label>
    <type>Checkbox</type>
</CustomField>