force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Payee that applies to the Expense Claim</description>
    <inlineHelpText>Defines the Payee that applies to the Expense Claim</inlineHelpText>
    <label>Payee</label>
    <referenceTo>tc9_pr__Payee__c</referenceTo>
    <relationshipLabel>Expense Claims</relationshipLabel>
    <relationshipName>Expense_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>