force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Payment_Entity__c</fullName>
    <description>Payment Entity Name. Used on email templates</description>
    <formula>tc9_et__Assignment__r.tc9_pr__Payment_Entity__r.Name</formula>
    <inlineHelpText>Payment Entity Name. Used on email templates</inlineHelpText>
    <label>Payment Entity</label>
    <type>Text</type>
</CustomField>