force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Primary_Approver_First_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Primary_Approver_First_Name__c</fullName>
    <description>The Primary Expense Claim Approvers First Name. Used on email templates</description>
    <formula>tc9_et__Assignment__r.tc9_et__Expense_Claim_Approver__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Primary Expense Claim Approvers First Name. Used on email templates</inlineHelpText>
    <label>Primary Approver First Name</label>
    <type>Text</type>
</CustomField>