force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Rejection_Comments__c</fullName>
    <description>If the Expense Claim has a Approval  Status of Rejected, the reason given by the Approver for the rejection.</description>
    <inlineHelpText>If the Expense Claim has a Approval  Status of Rejected, the reason given by the Approver for the rejection.</inlineHelpText>
    <label>Rejection Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>