force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Transaction_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Transaction_Creation_Status__c</fullName>
    <description>The stage in the transaction creation process the Expense Claim is in, updated by the application automatically. 
New - Expense Claim has not been approved 
Ready - Expense Claim Approved, ready to be processed 
Processed - Expense Claim has had Transactions created 
Failed - The process to create Transactions failed - check Debug Log</description>
    <formula>Case( 
Text(tc9_et__Transaction_Creation_Stage__c), 
&quot;1&quot;, 
&quot;New&quot;, 
&quot;2&quot;, 
&quot;Ready&quot;, 
&quot;3&quot;, 
&quot;Processed&quot;, 
&quot;Failed&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The stage in the transaction creation process the Expense Claim is in
New - Claim has not been approved 
Ready - Claim Approved, ready to be processed 
Processed - Claim has had Transactions created 
Failed - The process to create Transactions failed</inlineHelpText>
    <label>Transaction Creation Status (No Colour)</label>
    <type>Text</type>
</CustomField>