force-app/main/default/objects/tc9_et__Expense_Claim__c/fields/tc9_et__Transaction_Creation_Status_Colour__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Transaction_Creation_Status_Colour__c</fullName>
    <description>The stage in the transaction creation process the Expense Claim is in, updated by the application automatically. 
New - Expense Claim has not been approved 
Ready - Expense Claim Approved, ready to be processed 
Processed - Expense Claim has had Transactions created 
Failed - The process to create Transactions failed - check Debug Log</description>
    <formula>Case( 
Text(tc9_et__Transaction_Creation_Stage__c), 
&quot;1&quot;, 
(IMAGE(LEFT($Api.Partner_Server_URL_260,FIND(&apos;/services&apos;,$Api.Partner_Server_URL_260))+&quot;resource/tc9_et__t2pJ_Images/t2pJ_Images/WordNew.png&quot;,&quot;New&quot;,20,88)), 
&quot;2&quot;, 
(IMAGE(LEFT($Api.Partner_Server_URL_260,FIND(&apos;/services&apos;,$Api.Partner_Server_URL_260))+&quot;resource/tc9_et__t2pJ_Images/t2pJ_Images/WordReady.png&quot;,&quot;Ready&quot;,20,88)), 
&quot;3&quot;, 
(IMAGE(LEFT($Api.Partner_Server_URL_260,FIND(&apos;/services&apos;,$Api.Partner_Server_URL_260))+&quot;resource/tc9_et__t2pJ_Images/t2pJ_Images/WordProcessed.png&quot;,&quot;Processed&quot;,20,88)),
(IMAGE(LEFT($Api.Partner_Server_URL_260,FIND(&apos;/services&apos;,$Api.Partner_Server_URL_260))+&quot;resource/tc9_et__t2pJ_Images/t2pJ_Images/WordFailed.png&quot;,&quot;Failed&quot;,20,88)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The stage in the transaction creation process the Expense Claim is in
New - Claim has not been approved 
Ready - Claim Approved, ready to be processed 
Processed - Claim has had Transactions created 
Failed - The process to create Transactions failed</inlineHelpText>
    <label>Transaction Creation Status</label>
    <type>Text</type>
</CustomField>